# flowjax

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  README.rst  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  faq.doctree  index.doctree
.doctrees/api/: bijections.doctree  distributions.doctree  experimental.doctree  flows.doctree  losses.doctree  training.doctree  wrappers.doctree
.doctrees/examples/: bounded.doctree  conditional.doctree  constrained.doctree  snpe.doctree  unconditional.doctree  variational_inference.doctree
.doctrees/nbsphinx/examples/: constrained.ipynb  snpe.ipynb  variational_inference.ipynb
.github/workflows/: ci.yml  docs.yml  documentation.yml  publish.yml  test.yml  tests.yml
_modules/: index.html
_modules/flowjax/: distributions.html  flows.html  wrappers.html
_modules/flowjax/bijections/: affine.html  bijection.html  block_autoregressive_network.html  chain.html  concatenate.html  coupling.html  exp.html  jax_transforms.html  masked_autoregressive.html  orthogonal.html  planar.html  power.html  rational_quadratic_spline.html  sigmoid.html  softplus.html  tanh.html  utils.html
_modules/flowjax/experimental/: numpyro.html
_modules/flowjax/train/: data_fit.html  loops.html  losses.html  train_utils.html  variational_fit.html
_sources/: faq.rst  getting_started.rst  index.rst.txt
_sources/api/: bijections.rst  bijections.rst.txt  distributions.rst  flows.rst.txt  training.rst  training.rst.txt
_sources/examples/: bounded.ipynb.txt  conditional.ipynb  conditional.ipynb.txt  constrained.ipynb  snpe.ipynb  snpe.ipynb.txt  unconditional.ipynb  unconditional.ipynb.txt  variational_inference.ipynb.txt
api/: bijections.html  distributions.html  experimental.html  flows.html  losses.html  training.html  wrappers.html
docs/: Makefile  README.md  bijections.rst  conf.py  distributions.rst  example.rst  examples.rst  faq.rst  getting_started.rst  index.rst  nn.rst  requirements.txt  training.rst
docs/_build/html/: nn.html  (+10 more)
docs/_static/: style.css
docs/api/: api.rst  bijections.rst  distributions.rst  experimental.rst  flows.rst  losses.rst  training.rst  transformers.rst  wrappers.rst
docs/examples/: bnaf.ipynb  bounded.ipynb  conditional.ipynb  constrained.ipynb  creating_flows.ipynb  examples.rst  snpe.ipynb  transforming_distributions.ipynb  unconditional.ipynb  variational_inference.ipynb
doctest/: output.txt
doctrees/: environment.pickle  faq.doctree  getting_started.doctree  index.doctree
doctrees/api/: bijections.doctree  distributions.doctree  experimental.doctree  flows.doctree  losses.doctree  training.doctree  wrappers.doctree
doctrees/examples/: bounded.doctree  conditional.doctree  constrained.doctree  examples.doctree  snpe.doctree  unconditional.doctree  variational_inference.doctree
examples/: bnaf.ipynb  bounded.html  bounded.ipynb  conditional.html  conditional.ipynb  conditional_bnaf.ipynb  conditional_coupling_flows.ipynb  conditional_density_estimation.ipynb  conditional_nsf.ipynb  constrained.html  constrained.ipynb  examples.html  snpe.html  snpe.ipynb  two_moons.ipynb  unconditional.html  unconditional.ipynb  unconditional_bnaf.ipynb  unconditional_coupling_flows.ipynb  unconditional_nsf.ipynb  variational_inference.html
flowjax/: __init__.py  _custom_types.py  bisection_search.py  distributions.py  flows.py  masks.py  root_finding.py  tasks.py  train_utils.py  transformers.py  utils.py  wrappers.py
flowjax/bijections/: __init__.py  abc.py  affine.py  bijection.py  block_autoregressive_network.py  bnaf.py  chain.py  concatenate.py  coupling.py  elu.py  exp.py  extreme.py  jax_transforms.py  masked_autoregressive.py  matmul.py  orthogonal.py  parameterised.py  permute.py  planar.py  power.py  rational_quadratic_spline.py  sigmoid.py  softplus.py  tanh.py  transformers.py  univariate.py  utils.py
flowjax/experimental/: numpyro.py
flowjax/nn/: __init__.py  block_autoregressive.py  block_autoregressive_linear.py  bnaf.py  masked_autoregressive.py
flowjax/train/: __init__.py  data_fit.py  loops.py  losses.py  train_utils.py  variational_fit.py
jaxflows/: __init__.py  flow.py  flows.py  train_utils.py
jaxflows/bijections/: abc.py  affine.py  coupling.py  permute.py  rational_quadratic_spline.py
realnvp/: __init__.py  bijection_abcs.py  bijections.py  nn.py
realnvp/bijections/: abc.py  affine.py  coupling.py  permute.py  rational_quadratic_spline.py  real_nvp.py
tests/: test_bijections.py  test_bisection_search.py  test_distributions.py  test_flow.py  test_flows.py  test_masks.py  test_root_finding.py  test_train_utils.py  test_utils.py  test_wrappers.py
tests/test_bijections/: test_affine.py  test_bijection_utils.py  test_bijections.py  test_bnaf.py  test_chain.py  test_coupling.py  test_invertibility.py  test_jax_transforms.py  test_masked_autoregressive.py  test_nn.py  test_permute.py  test_rational_quadratic_spline.py  test_real_nvp.py
tests/test_experimental/: test_numpyro.py
tests/test_train/: test_data_fit.py  test_loops.py  test_losses.py  test_train_utils.py  test_variational_fit.py
tests/train/: test_data_fit.py  test_train_utils.py  test_variational_fit.py
(+23 files in other folders)
