[project]
authors = [{ name = "Daniel Ward", email = "danielward27@outlook.com" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["jax", "equinox>=0.10", "tqdm", "optax"]
description = "Easy to use distributions, bijections and normalizing flows in JAX."
keywords = ["jax", "neural-networks", "equinox"]
license = { file = "LICENSE" }
name = "flowjax"
readme = "README.md"
requires-python = ">=3.10"
version = "11.0.0"

[project.urls]
repository = "https://github.com/danielward27/flowjax"
documentation = "https://danielward27.github.io/flowjax/index.html"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "ipython",
  "numpyro",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.ruff]
select = ["E", "F", "B", "D", "COM", "I", "UP", "TRY004", "RET", "PT", "FBT"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
ignore = ["D102", "D105", "D107"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
"*.ipynb" = ["D"]
"__init__.py" = ["D"]
