[project]
authors = [{ name = "Daniel Ward", email = "danielward27@outlook.com" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["jax>=0.4.16", "equinox>=0.10", "jaxtyping", "tqdm", "optax"]
description = "Easy to use distributions, bijections and normalizing flows in JAX."
keywords = ["jax", "neural-networks", "equinox"]
license = { file = "LICENSE" }
name = "flowjax"
readme = "README.md"
requires-python = ">=3.10"
version = "15.0.0"

[project.urls]
repository = "https://github.com/danielward27/flowjax"
documentation = "https://danielward27.github.io/flowjax/index.html"

[project.optional-dependencies]
dev = [
  "pytest",
  "beartype",
  "ruff",
  "sphinx",
  "sphinx-book-theme",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "ipython",
  "numpyro",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--jaxtyping-packages=flowjax,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "B", "D", "COM", "I", "UP", "TRY004", "RET", "PT", "FBT"]
ignore = ["D102", "D105", "D107", "B028", "COM812", "F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"*.ipynb" = ["D"]
"__init__.py" = ["D"]
